--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-axios": "^2.0.6",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-owl-carousel": "^2.3.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1"
   },
